Moved gaps to their own block, added docs for them, fixes #219

--- a/blocks/global.styl
+++ b/blocks/global.styl
@@ -1,19 +1,3 @@
-// global classes for block margins
-// Example: .nb-gap_top_s .nb-gap_right_m
-
-for gap-side in 'top' 'left' 'bottom' 'right'
-  .nb-gap_{gap-side}_xs
-    margin-{gap-side}: $islands_xs
-
-  .nb-gap_{gap-side}_s
-    margin-{gap-side}: $islands_s
-
-  .nb-gap_{gap-side}_m
-    margin-{gap-side}: $islands_m
-
-  .nb-gap_{gap-side}_l
-    margin-{gap-side}: $islands_l
-
 // We need to deprecate `_hidden` somehow
 ._hidden,
 .nb-is-hidden
